--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
         run: |
           # Run all .sql files in the sql/ directory
-          for file in $(ls sql/*.sql); do
+          for file in $(find sql/ -name '*.sql'); do
             echo "Running $file ..."
             psql --set ON_ERROR_STOP=1 -e -f $file
           done
