--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,16 @@ jobs:
       - name: Install PostgreSQL client
         run: sudo apt-get install postgresql-client -y
 
-      # Step 3: Deploy DDL scripts to AWS RDS Postgres
+      # Step 3: Get list of changed SQL files
+      - name: List changed SQL files
+        id: changed_files
+        run: |
+          # Get the list of changed SQL files
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '\.sql' || true)
+          echo "Changed SQL files: $CHANGED_FILES"
+          echo "::set-output name=files::$CHANGED_FILES"
+
+      # Step 4: Deploy DDL scripts to AWS RDS Postgres
       - name: Deploy DDL Scripts
         env:
           PGHOST: ${{ secrets.DB_HOST }}
@@ -28,8 +37,8 @@ jobs:
           PGPORT: ${{ secrets.DB_PORT || '5432' }}  # Default to 5432 if not specified
 
         run: |
-          # Run all .sql files in the sql/ directory
-          for file in $(find sql/ -name '*.sql'); do
+          # Loop through each changed SQL file and run it
+          for file in ${{ steps.changed_files.outputs.files }}; do
             echo "Running $file ..."
             psql --set ON_ERROR_STOP=1 -e -f $file
           done
